Changelog
=========

8.1-dev - (unreleased)
----------------------
* Change: removed the temporalCoverage field from the dataservice schema
  allowing the schemaextender from Products.EEAContentTypes to add the field
  [ichimdav refs #17611]

8.0 - (2013-12-10)
------------------
* Bug fix: correctly move the geographicalCoverage within the metadata tab
  for EEAFigure and Data
  [ichimdav refs #17663]
* Feature: added a possibility to define the map layer that should be used
  when using the view macro of the location widget. See example within 
  eea.geotags.pt
  [ichimdav refs #17618]
* Bug fix: do not move the geotags map if the geotag div is hidden 
  [ichimdav refs #17618]
* Change: moved the ITemporalCoverageAdapter from eea.dataservice into
  Products.EEAContentTypes
  [ichimdav refs #17588]
* Change: removed versions macro; now using viewlet
  [simiamih refs #17321]

7.9 - (2013-11-20)
------------------
* Feature: added ITemporalCoverageAdapter which is an adapter than can be
  overriden in order to return a temporalCoverage value
  [ichimdav refs #16719 and #17306]
* Feature: added styling for the geographical and temporal viewlets
  [ichimdav refs #16719]

7.8 - (2013-11-01)
------------------
* Change: sort by getObjPositionInParent the Data Files within dataset_view
  [ichimdav refs #17335]

7.7 - (2013-10-22)
------------------
* Feature: Added quick-upload portlets upgrade step
  [tiberich #16997]
* Bug fix: also implement Products.ATContentTypes.interfaces.IFileContent for the
  EEAFigureFile and DataFile objects
  [tiberich #16997]

7.6 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  [ichimdav refs #15651]
* Change: Added portal_url definition to the tooltip macro in order for it to
  be used by templates that are not dataset_view
  [ichimdav #16719]
* Bug fix: Fixed Organisation's vocabulary for organisations with non-ascii title
  [voineali refs #16804]

7.5 - (2013-09-23)